syntax = "proto3";

package users;

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.users";


message AddressResponse {
  string id = 1;               
  string address = 2;
  string street = 3;
  string ward = 4;
  string district = 5;
  string province = 6;
  string user_id = 7;           
}
