syntax = "proto3";

package users;

import "services/users/addresses/response/address.response.proto";

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.users";


message GetAddressByIdResponse {
    AddressResponse address = 1;
}

